--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,3 +24,12 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/TPS_game")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/TPS_game")
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=Q
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+
